Add export of SHACL shapes in Excel. The export covers the main properties